# gpao-t

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  GPAO-T-WORKSPACE-CONTRACT-v0.1-ko.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  package-lock.json  package.json
config/: gpao-t-release.json
docs/: DEVELOPMENT-PRINCIPLES.md  GPAO-T-DASHBOARD-DESIGN-RECIPE.md  LOCAL-CONTROL-CENTER-DESIGN-RECIPE.md  README.md
installer/: GPAO-T-Install.command  MACOS-README.md  README.md  WINDOWS-README.md  ai.nbeai.gpao-t.plist.template  gpao-t-macos-local.mjs
native/: macos-keychain-helper.swift
schema/: gpao-t-control-center-ui-schema.json  gpao-t-runtime-data-schema.json
src/: index.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
tauri-shell/: index.html
test/: adapter-boundary.test.js  admission-replay-view.test.js  approval-audit-records.test.js  auto-memory-growth-loop.test.js  capability-platform.test.js  chat-preflight-replay.test.js  codex-runtime-route-hardening.test.js  connection-cell.test.js  connection-concierge.test.js  connector-catalog.test.js  connector-controller.test.js  connector-governance.test.js  context-influence.test.js  control-center.test.js  core-contracts.test.js  credential-bridge.test.js  credential-store.test.js  dashboard-route-crawl.test.js  design-recipe.test.js  distribution-source-stage-seal.test.js  docker-smoke.test.js  doctor-recovery-heart.test.js  event-router.test.js  f1-flight-computer-qualification.test.js  (+111 more)
tools/: bench.mjs  (+98 more)
(+556 files in other folders)
