[package]
name = "gpao-t"
version = "0.1.0"
description = "GPAO-T read-mostly packaged desktop shell source slice."
authors = ["윤 (@aigis0927)"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
